--- a/Ziazios Konstantinos-AzureMobileServices/Project/Source/Android/skgazure2015/app/src/main/res/values/strings.xml
+++ b/Ziazios Konstantinos-AzureMobileServices/Project/Source/Android/skgazure2015/app/src/main/res/values/strings.xml
@@ -1,10 +1,10 @@
 <resources>
 
-    <string name="app_name">skgazure2015</string>
-    <string name="add_textbox_hint">Add a ToDo item</string>
+    <string name="app_name">SKG Azure 2015</string>
+    <string name="add_textbox_hint">Add Lecture</string>
     <string name="add_button_text">Add</string>
-    <string name="mobile_services">Mobile Services </string>
+    <string name="mobile_services">Schedule</string>
     <string name="menu_refresh">Refresh</string>
-    <string name="checkbox_text">Item Text</string>
+    <string name="checkbox_text">Lecture Title</string>
     
 </resources>
