--- a/Ziazios Konstantinos-AzureMobileServices/Project/Source/Android/skgazure2015/app/src/main/res/values/strings.xml
+++ b/Ziazios Konstantinos-AzureMobileServices/Project/Source/Android/skgazure2015/app/src/main/res/values/strings.xml
@@ -1,10 +1,14 @@
 <resources>
 
     <string name="app_name">SKG Azure 2015</string>
-    <string name="add_textbox_hint">Add Lecture</string>
+    <string name="add_textbox_hint">Add Comment</string>
     <string name="add_button_text">Add</string>
     <string name="mobile_services">Schedule</string>
     <string name="menu_refresh">Refresh</string>
     <string name="checkbox_text">Lecture Title</string>
+    <string name="title_activity_comment">Comments</string>
+
+    <string name="hello_world">Hello world!</string>
+    <string name="action_settings">Settings</string>
     
 </resources>
